# vorta

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  main.go
api/: api.pb.go  api.proto  api_grpc.pb.go
gramine-zub/CI-Examples/fib/: config.yaml  dockerfile  fib.manifest.template  fibdock.manifest.template
gramine-zub/CI-Examples/fib/scripts/: bash_test.sh
mainframe/: Cargo.toml
mainframe/src/: api.rs  attestation.rs  config.rs  enclave.rs  error.rs  lib.rs  main.rs  scheduler.rs
manager/: manager.go
pkg/: setup_worker_node.sh
pkg/consul/: client.go  structs.go
ra-verifier/: README.md  docker-compose.yml
ra-verifier/tappd-simulator/: .gitignore  Cargo.toml  Dockerfile  README.md  tappd.toml
ra-verifier/tappd-simulator/.github/workflows/: ci.yml
ra-verifier/tappd-simulator/.gittmp/: config  index  packed-refs
ra-verifier/tappd-simulator/.gittmp/logs/refs/heads/: main
ra-verifier/tappd-simulator/.gittmp/objects/pack/: pack-a61a3b718f29ff569b1d9c12805d1eedbf01859f.idx  pack-a61a3b718f29ff569b1d9c12805d1eedbf01859f.pack
ra-verifier/tappd-simulator/.gittmp/refs/heads/: main
ra-verifier/tappd-simulator/c_impl/: Makefile  make_quote.c
ra-verifier/tappd-simulator/certs/: app.crt  app.key
ra-verifier/tappd-simulator/dcap-attestation/: local_database.db  main.py  pyproject.toml
ra-verifier/tappd-simulator/dcap-attestation/src/dcap_attestation/: api.py  crud.py  database.py  models.py  quote.py  verify.py
ra-verifier/tappd-simulator/src/: http_routes.rs  main.rs  rocket_helper.rs  rpc_call.rs  rpc_service.rs
ra-verifier/tappd-simulator/src/ra_tls/: cert.rs  mod.rs
ra-verifier/toy-api/: index.js  package-lock.json  package.json
stats/: stats.go
task/: task.go
worker/: worker.go
zk-fib/: README.md
zk-fib/elf/: riscv32im-succinct-zkvm-elf
zk-fib/script/: fibonacci  run.sh
zk8s-verifier/: .env.example  README.md
zk8s-verifier/broadcast/DeploySystem.s.sol/2442/: run-latest.json
zk8s-verifier/broadcast/DeploySystem.s.sol/48899/: run-latest.json
zk8s-verifier/broadcast/DeploySystem.s.sol/5003/: run-latest.json
zk8s-verifier/broadcast/DeploySystem.s.sol/59141/: run-latest.json
zk8s-verifier/contracts/: AutomataDcapAttestation.sol  PCCSRouter.sol  ZK8SVerifier.sol
zk8s-verifier/contracts/bases/: QuoteVerifierBase.sol  X509ChainBase.sol
zk8s-verifier/contracts/verifiers/: V4QuoteVerifier.sol
zk8s-verifier/forge-script/: DeployRisc0Verifier.s.sol  DeploySystem.s.sol
zk8s-verifier/forge-test/: AutomataDcapAttestationTest.t.sol
zk8s-verifier/scripts/: deploy-mantle.sh  deploy.sh
