[package]
name = "tappd-simulator"
version = "0.1.1"
edition = "2021"

[dependencies]
tappd-rpc = { version = "0.1.0", path = "./rpc" }
rocket = { git = "https://github.com/rwf2/Rocket", branch = "master", features = ["mtls", "json"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
fs-err = "2.11.0"
rcgen = { version = "0.13.1", features = ["x509-parser", "pem"] }
sha2 = "0.10.8"
clap = { version = "4.5.18", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
hex = "0.4.3"
serde_json = "1.0.128"
bollard = "0.17.1"
prpc = "0.2.1"
x509-parser = "0.16.0"
bon = "2.2.1"
p256 = "0.13.2"
ring = "0.17.8"
rustls-pki-types = "1.8.0"
elliptic-curve = { version = "0.13.8", features = ["pkcs8"] }
proptest = "1.5.0"
dcap-qvl = { git = "https://github.com/Leechael/dcap-qvl", branch = "feat-arbitrary" }
scale = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = [
    "derive",
] }
reqwest = "0.12.8"

[workspace]
members = ["rpc"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = false

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
